[FAN-229] Updated Russian

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -40,7 +40,7 @@
         "description": "Description (What's the story behind this NFT?)"
       },
       "tip-warning": {
-        "collection-symbol":"Add an explanation to Collection Symbol",
+        "collection-symbol":"Collection Symbol is an abbreviated version of your brand name. Think of it as your collection logo in the form of an acronym (i.e. BTC for bitcoin). ",
         "ERC721": "The ERC-721 token standard represents a single unique asset. It is immutable, transparent in ownership and security, and the most widely used. Each ERC-721 token holds its own unique contract values.",
         "ERC1155": "The ERC-1155 is a dual purpose fungible and non fungible token. It’s faster and more efficient to use in batch token transfers and can be deployed in a single smart contract for an infinite number of token types. "
       }
@@ -114,7 +114,6 @@
     "title": "Create NFT collection",
     "collections": "Collections",
     "subCollection": "When creating your first NFT, you need to create a collection. For next creation, you can put the NFT in an already created collection."
-
   },
   "create-nft": {
     "channelOption": {
@@ -241,7 +240,7 @@
     "disconnect": "Disconnect",
     "drops": "Dr🔥ps",
     "how-it-works": "How it works",
-    "inventory": "My Profile",
+    "inventory": "My profile",
     "market": "Marketplace",
     "my-collections": "My collections",
     "profile-settings": "Profile settings",
