--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -38,7 +38,8 @@
       "tip-warning": {
         "collection-symbol": "Символ коллекции - это сокращенная версия названия вашего бренда. Считайте, что это логотип вашей коллекции в виде аббревиатуры (например, BTC - биткоин). ",
         "ERC721": "Стандарт токенов ERC-721 представляет собой единый уникальный актив. Он неизменяем, прозрачен с точки зрения владения и безопасности и является наиболее широко используемым. Каждый токен ERC-721 хранит свои уникальные контрактные ценности.",
-        "ERC1155": "ERC-1155 - это токен двойного назначения: сменные и несменные. Он быстрее и эффективнее используется при пакетной передаче токенов и может быть развернут в одном смарт-контракте для бесконечного числа типов токенов. "
+        "ERC1155": "ERC-1155 - это токен двойного назначения: сменные и несменные. Он быстрее и эффективнее используется при пакетной передаче токенов и может быть развернут в одном смарт-контракте для бесконечного числа типов токенов. ",
+        "description": "Что здесь происходит?"
       }
     }
   },
@@ -131,6 +132,9 @@
       "standard": "Стандарт",
       "supply": "Выпущено",
       "collection": "Коллекция"
+    },
+    "tip-warning": {
+      "description": "Какая история стоит за этим NFT?"
     },
     "next": "Next",
     "standardOption": [
