--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -305,6 +305,11 @@
       "title": "Популярные коллекции"
     }
   },
+  "product-panel": {
+    "Comics": "Комикс",
+    "art": "Исскуство",
+    "sports": "Спорт"
+  },
   "product-card": {
     "burn": "Сжечь токены",
     "not-on-sale": "Нет в продаже",
