fix: Added translation

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -298,11 +298,11 @@
   },
   "monthFormat": "{month, select, 1{January} 2{February} 3{March} 4{April} 5{May} 6{June} 7{July} 8{August} 9{September} 10{October} 11{November} 12{December}}",
   "movers": {
-    "title": "Featured Collections"
+    "title": "Fast Movers"
   },
   "overview": {
     "collections": {
-      "title": "Collections"
+      "title": "Featured Collections"
     }
   },
   "product-panel": {
