--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -303,12 +303,17 @@
   },
   "monthFormat": "{month, select, 1{January} 2{February} 3{March} 4{April} 5{May} 6{June} 7{July} 8{August} 9{September} 10{October} 11{November} 12{December}}",
   "movers": {
-    "title": "Featured Collections"
+    "title": "Fast Movers"
   },
   "overview": {
     "collections": {
-      "title": "Collections"
+      "title": "Featured Collections"
     }
+  },
+  "product-panel": {
+    "Comics": "Comics",
+    "art": "art",
+    "sports": "sports"
   },
   "product-card": {
     "burn": "Burn token",
@@ -350,7 +355,7 @@
       "Comics": "Comics",
       "all": "All",
       "art": "Art",
-      "sport": "Sport",
+      "sport": "Sports",
       "sports": "Sports"
     },
     "bio": "Bio",
