--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -305,6 +305,11 @@
       "title": "Collections"
     }
   },
+  "product-panel": {
+    "art": "Art",
+    "sports": "Sports",
+    "Comics": "Comics"
+  },
   "product-card": {
     "burn": "Burn token",
     "not-on-sale": "Not on sale",
