Fixbug/fan 473/time over (#199)
* fix: text when time is over

* fix: lable

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -311,9 +311,9 @@
     }
   },
   "product-panel": {
-    "Comics": "Comics",
-    "art": "art",
-    "sports": "sports"
+    "art": "Art",
+    "sports": "Sports",
+    "Comics": "Comics"
   },
   "product-card": {
     "burn": "Burn token",
