--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -306,9 +306,9 @@
     }
   },
   "product-panel": {
-    "Comics": "Комикс",
     "art": "Исскуство",
-    "sports": "Спорт"
+    "sports": "Спорт",
+    "Comics": "Комикс"
   },
   "product-card": {
     "burn": "Сжечь токены",
