--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -271,6 +271,7 @@
     "cancel": "Убрать",
     "canceled": "Убрано",
     "claim": "Забрть",
+    "claimed": "Заявлено",
     "status": {
       "Claimed": {
         "creator": "Товар продан",
