--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -276,6 +276,7 @@
     "cancel": "Cancel",
     "canceled": "Canceled",
     "claim": "Claim",
+    "claimed": "Claimed",
     "status": {
       "Claimed": {
         "creator": "Item has been sold",
