modify drop and optimized language

--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -112,7 +112,7 @@
     ],
     "submit": "Создать",
     "submitting": "В процессе создания",
-    "title": "Создать коллекцию NFT",
+    "title": "Создать NFT",
     "collections": "Коллекции",
     "subCollection": "При создании первого НМТ необходимо создать коллекцию. При следующем создании вы можете поместить НМТ в уже созданную коллекцию."
   },
