--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -112,7 +112,7 @@
     ],
     "submit": "创建",
     "submitting": "正在创建中",
-    "title": "创建NFT作品集",
+    "title": "创建 NFT",
     "collections": "作品集",
     "subCollection": "创建NFT时，需要先创建一个作品集。之后可在该作品集中创建对应标准的NFT。"
   },
