--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -112,7 +112,7 @@
     ],
     "submit": "Create",
     "submitting": "Creating",
-    "title": "Create NFT collection",
+    "title": "Create NFT",
     "collections": "Collections",
     "subCollection": "When creating your first NFT, you need to create a collection. For next creation, you can put the NFT in an already created collection."
   },
