feat: new nft card; profile collection\showcase\on sale\my bids update

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -26,7 +26,7 @@
       "addNewItem": "Add new item",
       "createNewcollection": "Create new collection",
       "createNewItem": "Create new item",
-      "itemsCount": "{value, plural, =0 {No NFT} =1 {One NFT} other {# NFTs}}"
+      "itemsCount": "{value, plural, =0 {0 NFT} =1 {1 NFT} other {# NFTs}}"
     },
     "create": {
       "avatar-accepts": "Supports JPG, PNG, JPEG2000",
@@ -40,7 +40,7 @@
         "description": "Description"
       },
       "tip-warning": {
-        "collection-symbol":"Collection Symbol is an abbreviated version of your brand name. Think of it as your collection logo in the form of an acronym (i.e. BTC for bitcoin). ",
+        "collection-symbol": "Collection Symbol is an abbreviated version of your brand name. Think of it as your collection logo in the form of an acronym (i.e. BTC for bitcoin). ",
         "ERC721": "The ERC-721 token standard represents a single unique asset. It is immutable, transparent in ownership and security, and the most widely used. Each ERC-721 token holds its own unique contract values.",
         "ERC1155": "The ERC-1155 is a dual purpose fungible and non fungible token. It’s faster and more efficient to use in batch token transfers and can be deployed in a single smart contract for an infinite number of token types.",
         "description": "What's the story here?"
@@ -218,7 +218,7 @@
     "label": {
       "live": "Live",
       "coming": "Coming",
-      "previous":"Previous"
+      "previous": "Previous"
     }
   },
   "empty-data": {
@@ -325,7 +325,8 @@
     "sold-for": "Sold for",
     "top-bid": "Top Bid",
     "pool-start-tips": "The pool will start in:",
-    "transfer": "Transfer token"
+    "transfer": "Transfer token",
+    "balance-tip": "{balance} editions in account"
   },
   "cancel-timer": {
     "title": "Cancel Sale",
@@ -399,10 +400,11 @@
       "following": "Following",
       "items": "Items",
       "liked": "Liked",
-      "my-bids": "My transaction",
-      "my-collections": "My collections",
+      "my-bids": "My Bids",
+      "my-owner": "My Showcase",
+      "my-collections": "My Collections",
       "my-items": "My items",
-      "my-sells": "My sales"
+      "my-sells": "On Sale"
     },
     "unfollow": "Unfollow",
     "user-profile": "User profile"
