fix: card like, item nft detail

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -401,8 +401,8 @@
       "items": "Items",
       "liked": "Liked",
       "my-bids": "My Bids",
-      "my-owner": "My Showcase",
-      "my-collections": "My Collections",
+      "my-owner": "Showcase",
+      "my-collections": "Collections",
       "my-items": "My items",
       "my-sells": "On Sale"
     },
