--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -229,7 +229,7 @@
     "data-is-not-available": "Data is not available",
     "greater-than": "It must be greater than {value}",
     "less-than": "It must be less than {value}",
-    "unexpected": "Unexpected error"
+    "unexpected": "Server exception"
   },
   "form": {
     "limit-counter": "{value}/{maxLimit}"
