[FAN-535] follow function (#206)
* complete Follow web page

* complete follow group

* toggle follow

* complete follow

* complete all follow

* delete garbage

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -388,7 +388,12 @@
     "edit-avatar": "Edit avatar",
     "edit-cover": "Edit profile cover",
     "edit-profile": "Edit profile",
-    "follow": "Follow",
+    "follow": {
+      "follow": "Follow",
+      "following": "Following",
+      "followers": "Followers",
+      "unfollow": "Unfollow"
+    },
     "no-items": {
       "btn": "Browse marketplace",
       "descr": "You have not minted any NFTs yet",
