--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -348,7 +348,7 @@
       "event": "Event",
       "from": "From",
       "item": "Item",
-      "price": "Price",
+      "amount": "Amount",
       "quantity": "Quantity",
       "to": "To",
       "transfer": "Transfer"
