--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -341,7 +341,7 @@
       "event": "Мероприятие",
       "from": "От",
       "item": "Товар",
-      "price": "Цена",
+      "amount": "Цена",
       "quantity": "Количество",
       "to": "Кому",
       "transfer": "Перевести"
