--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -381,7 +381,14 @@
     "edit-avatar": "Редактировать аватарку",
     "edit-cover": "Изменить обложку профиля",
     "edit-profile": "Редактировать профиль",
-    "follow": "Подписаться",
+    "follow": {
+      "follow": "Следить",
+      "following": "Следующие",
+      "followers": "Подписчики",
+      "unfollow": "Отписаться",
+      "no-list": "Список пуст",
+      "my-self": "Я"
+    },
     "no-items": {
       "btn": "Обзор рынка",
       "descr": "У вас нет созданных NFT",
