--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -340,8 +340,6 @@
       "claimed": "Вывыдено",
       "created": "Создано",
       "date": "Дата",
-      "empty-description": "Вы пока не совершили никаких действий",
-      "empty-title": "Не найдено никаких действий",
       "event": "Мероприятие",
       "from": "От",
       "item": "Товар",
@@ -395,8 +393,18 @@
     },
     "no-items": {
       "btn": "Обзор рынка",
-      "descr": "У вас нет созданных NFT",
-      "title": "Товары не найдены"
+      "descr": "У вас еще нет NFT.",
+      "title": "Ничего не найдено",
+      "onSale-title": "Ничего не найдено",
+      "onSale-description": "Вы еще не выставили ни одного предмета на продажу.",
+      "showCase-title": "Ничего не найдено",
+      "showCase-description": "У вас еще нет NFT.",
+      "MyBids-title": "Ничего не найдено",
+      "MyBids-description": "Вы еще не сделали ставку ни на один товар. Зайдите на нашу торговую площадку!",
+      "Activity-title": "Действия не найдены",
+      "Activity-description": "Исследуйте фантастическое, чтобы найти азарт!",
+      "Liked-title": "Ничего не найдено",
+      "Liked-description": "Вам еще не понравились NFT. Зайдите на нашу торговую площадку!"
     },
     "subscribers": "Подписчики",
     "tabs": {
