--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -198,7 +198,8 @@
     },
     "role": {
       "seller": "Владелец",
-      "minter": "Создатель"
+      "minter": "Создатель",
+      "collection": "коллекцию"
     },
     "top-bid": "Наивысшая ставка",
     "your-bid": "Ваша ставка"
