--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -198,7 +198,8 @@
     },
     "role": {
       "seller": "拥有者",
-      "minter": "创建者"
+      "minter": "创建者",  
+      "collection": "作品集"
     },
     "top-bid": "最高出价",
     "your-bid": "您的出价"
