--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -192,7 +192,8 @@
     },
     "role": {
       "seller": "Owner",
-      "minter": "Creator"
+      "minter": "Creator",
+      "collection": "Collection"
     },
     "top-bid": "Top Bid",
     "your-bid": "Your bid"
