--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -323,7 +323,8 @@
     "top-bid": "Top Bid",
     "pool-start-tips": "The pool will start in:",
     "transfer": "Transfer token",
-    "balance-tip": "{balance} editions in account"
+    "balance-tip": "{balance} editions in account",
+    "sold-for-quantity": "Sold {sold} of {quantity}"
   },
   "cancel-timer": {
     "title": "Cancel Sale",
