--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -321,7 +321,9 @@
     "put-on-cancel": "取消出售",
     "transfer": "发送token",
     "pool-start-tips": "售卖开始倒计时：",
-    "burn": "销毁token"
+    "burn": "销毁token", 
+    "balance-tip": "当前可售份数 {balance}",
+    "sold-for-quantity": "已售出 {sold} / {quantity}"
   },
   "cancel-timer": {
     "title": "取消出售",
