--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -224,7 +224,8 @@
     "data-is-not-available": "Data is not available",
     "greater-than": "It must be greater than {value}",
     "less-than": "It must be less than {value}",
-    "unexpected": "Server exception"
+    "unexpected": "Server exception",
+    "contract-rejected": "Contract operation is rejected"
   },
   "form": {
     "limit-counter": "{value}/{maxLimit}"
