--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -323,7 +323,8 @@
     "top-bid": "Top Bid",
     "pool-start-tips": "The pool will start in:",
     "transfer": "Transfer token",
-    "balance-tip": "{balance} editions in account",
+    "item-balance-tip": "{balance} editions in account",
+    "pool-balance-tip": "{balance} available for purchase",
     "sold-for-quantity": "Sold {sold} of {quantity}"
   },
   "cancel-timer": {
@@ -489,7 +490,9 @@
     "time-left-short": "{days} {hours} {minutes} {seconds} left",
     "time-end": "Ended on {days}/{months}/{years}",
     "time-expired": "Time expired",
-    "time-over": "Time is over"
+    "time-over": "Time is over",
+    "time-left-tip": "Time left",
+    "time-left": "{days} {hours} {minutes} {seconds}"
   },
   "transfer-token": {
     "submit": "Transfer",
