--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -324,6 +324,8 @@
     "pool-start-tips": "Бассейн будет запущен:",
     "transfer": "Перевести токен",
     "balance-tip": "{balance} издания на счете",
+    "item-balance-tip": "{balance} изданий на счету",
+    "pool-balance-tip": "{balance} доступны для покупки",
     "sold-for-quantity": "Продано {sold} из {quantity}"
   },
   "cancel-timer": {
@@ -489,7 +491,9 @@
     "time-left-short": "Осталось {days} {hours} {minutes} {seconds}",
     "time-end": "Закончился на {days}/{months}/{years}",
     "time-expired": "Время истекло",
-    "time-over": "Время истекло"
+    "time-over": "Время истекло",
+    "time-left-tip": "Остаток времени",
+    "time-left": "{days} {hours} {minutes} {seconds}"
   },
   "transfer-token": {
     "submit": "Перевести",
