--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -106,7 +106,10 @@
       "standard": "Standard",
       "supply": "Supply"
     },
-    "standardOption": ["ERC-721", "ERC-1155"],
+    "standardOption": [
+      "ERC-721",
+      "ERC-1155"
+    ],
     "submit": "Create",
     "submitting": "Creating",
     "title": "Create NFT",
@@ -134,7 +137,10 @@
       "description": "What's the story behind this NFT?"
     },
     "next": "Next",
-    "standardOption": ["ERC-721", "ERC-1155"],
+    "standardOption": [
+      "ERC-721",
+      "ERC-1155"
+    ],
     "submit": "Create",
     "submitting": "Creating",
     "time": "",
@@ -285,7 +291,7 @@
         "creator": "Auction is in progress"
       },
       "NotSoldByReservePrice": {
-        "buyer": "Item hasn't been sold. Claim your tokens back",
+        "buyer": "Item hasn't been sold. Claim your funds back",
         "creator": "Item hasn't been sold. Claim your NFT back",
         "others": "Item hasn't been sold"
       }
@@ -322,7 +328,11 @@
     "top-bid": "Top Bid",
     "pool-start-tips": "The pool will start in:",
     "transfer": "Transfer token",
-    "balance-tip": "{balance} editions in account"
+    "lost": "Your bid was lost",
+    "won": "Your bid won",
+    "outbid": "You were outbid",
+    "claim-funds": "Claim funds",
+    "claim-token": "Claim token"
   },
   "cancel-timer": {
     "title": "Cancel Sale",
@@ -337,7 +347,7 @@
       "ago": " ago"
     },
     "activity": {
-      "tab":{
+      "tab": {
         "create": "Create",
         "listings": "Listings",
         "bids": "Bids",
