--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -159,6 +159,7 @@
     "buy-now": "Купить сейчас",
     "descr-full": "Полное описание",
     "descr-short": "развернуть",
+    "pool-amount-tip": "Доступно для покупки / Общее предложение",
     "dialog": {
       "footnote": "Размещенные ставки на аукционе не могут быть отозваны",
       "input-info": "Ваша ставка должна быть не менее  {value} {currency}"
