--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -153,6 +153,7 @@
     "buy-now": "Buy now",
     "descr-full": "Full description",
     "descr-short": "Collapse",
+    "pool-amount-tip": "Available for purchase / Total supply",
     "dialog": {
       "footnote": "Bids placed in auction cannot be withdrawn",
       "input-info": "Minimum bid {value} {currency}"
