fix/hide link in tab activity

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -370,7 +370,7 @@
       "event": "Event",
       "from": "From",
       "item": "Item",
-      "amount": "Amount",
+      "price": "Price",
       "quantity": "Quantity",
       "to": "To",
       "transfer": "Transfer"
