--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -551,6 +551,15 @@
     "royalties": "Royalties",
     "change": "Change",
     "royalty-rate": "Royalty rate",
-    "royalty-rate-tip": "A royalty rate of 0.1% to 6.5% can be set and changed as you want, but the change will take effect in around 30 minutes."
+    "royalty-rate-tip": "A royalty rate of 0.1% to 6.5% can be set and changed as you want, but the change will take effect in around 30 minutes.",
+    "royalty-desc": "Once you’ve set a royalty rate for your collection, payouts for your created and sold NFTs will show here. Your wallet address is used by default to receive the royalties, which are automatically sent out each time a transaction is completed.",
+    "table": {
+      "item": "Item",
+      "price": "Price",
+      "quantity":"Quantity",
+      "fee": "Fee Earned",
+      "payout": "Payout",
+      "empty": "You have not received any royalty yet."
+    }
   }
 }
