--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -121,7 +121,11 @@
       "Comicbooks": "Комикс",
       "Comics": "Комикс",
       "FineArts": "Изобразительное искусство",
-      "Sports": "Спорт"
+      "Sports": "Спорт",
+      "Collectible": "Коллекционирование",
+      "Music": "Музыка",
+      "Performer": "Исполнитель",
+      "Metaverse": "Метаверс"
     },
     "label": {
       "Set-up-date": "Установить дату и время",
@@ -313,7 +317,11 @@
     "all": "Всё",
     "art": "Исскуство",
     "sports": "Спорт",
-    "Comics": "Комикс"
+    "Comics": "Комикс",
+    "collectible": "Коллекционирование",
+    "music": "Музыка",
+    "performer": "Исполнитель",
+    "metaverse": "Метаверс"
   },
   "product-card": {
     "burn": "Сжечь токены",
